variaveis
